modified:   CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,14 @@ if(NOT DEFINED CMAKE_CXX_STANDARD OR CMAKE_CXX_STANDARD LESS 14)
 endif()
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+
+# 设置编译后安装路径
+set(CMAKE_INSTALL_PREFIX ${SOCI_SOURCE_DIR}/../../build_evn/soci)
+message("CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
+
+
+
+
 # Path to additional CMake modules
 set(CMAKE_MODULE_PATH ${SOCI_SOURCE_DIR}/cmake/modules ${CMAKE_MODULE_PATH})
 set(CMAKE_MODULE_PATH ${SOCI_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
